unpackaged/main/default/objects/Activity/fields/Activity_Age_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Activity_Age_Hrs__c</fullName>
    <formula>(now() -  CreatedDate ) * 24</formula>
    <label>Activity Age (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>