unpackaged/main/default/objects/Activity/fields/Activity_New_Logo_c__c.field-meta.xml
<CustomField>
    <fullName>Activity_New_Logo_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify and track outbound prospecting efforts targeted to bring in new logos.</description>
    <inlineHelpText>Select this box if this is a new logo you are targeting.</inlineHelpText>
    <label>New Logo Prospect</label>
    <type>Checkbox</type>
</CustomField>