unpackaged/main/default/objects/Activity/fields/Additional_Notes_Exist__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Notes Exist</label>
    <type>Checkbox</type>
</CustomField>