unpackaged/main/default/objects/Activity/fields/Attitude__c.field-meta.xml
<CustomField>
    <fullName>Attitude__c</fullName>
    <label>Attitude</label>
    <type>TextArea</type>
</CustomField>