unpackaged/main/default/objects/Activity/fields/CallRef__c.field-meta.xml
<CustomField>
    <fullName>CallRef__c</fullName>
    <label>CallRef</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>