unpackaged/main/default/objects/Activity/fields/External_Activites__c.field-meta.xml
<CustomField>
    <fullName>External_Activites__c</fullName>
    <formula>IF( ISPICKVAL( Type__c , &quot;External&quot;) ,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Activites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>