unpackaged/main/default/objects/Activity/fields/Internal_Activities__c.field-meta.xml
<CustomField>
    <fullName>Internal_Activities__c</fullName>
    <formula>IF( ISPICKVAL( Type__c , &quot;Internal&quot;) ,1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>