unpackaged/main/default/objects/Activity/fields/IsTaskDue__c.field-meta.xml
<CustomField>
    <fullName>IsTaskDue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box is modified by a time trigger on a task workflow rule when the task is due.</description>
    <label>IsTaskDue</label>
    <type>Checkbox</type>
</CustomField>