unpackaged/main/default/objects/Activity/fields/Manager_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Notes__c</fullName>
    <label>Manager&#39;s Notes</label>
    <type>TextArea</type>
</CustomField>