unpackaged/main/default/objects/Activity/fields/Managers_Notes_Exist__c.field-meta.xml
<CustomField>
    <fullName>Managers_Notes_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managers Notes Exist</label>
    <type>Checkbox</type>
</CustomField>