unpackaged/main/default/objects/Activity/fields/MH_Action__c.field-meta.xml
<CustomField>
    <fullName>MH_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this activity sourced from a Miller Heiman Bluesheet ?</description>
    <label>Bluesheet Action</label>
    <type>Checkbox</type>
</CustomField>