unpackaged/main/default/objects/Activity/fields/MH_Greensheet__c.field-meta.xml
<CustomField>
    <fullName>MH_Greensheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this item have an associated Miller Heiman Greensheet ?</description>
    <label>Associated Greensheet</label>
    <type>Checkbox</type>
</CustomField>