unpackaged/main/default/objects/Activity/fields/New_Information__c.field-meta.xml
<CustomField>
    <fullName>New_Information__c</fullName>
    <label>New Information</label>
    <type>TextArea</type>
</CustomField>