unpackaged/main/default/objects/Activity/fields/Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Queue_ID__c</fullName>
    <label>Queue ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>