unpackaged/main/default/objects/Activity/fields/Related_Department__c.field-meta.xml
<CustomField>
    <fullName>Related_Department__c</fullName>
    <inlineHelpText>Select from the picklist which department this task is related to.</inlineHelpText>
    <label>Related Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Corporate Accounts</fullName>
            </value>
            <value>
                <fullName>Event Intelligence</fullName>
            </value>
            <value>
                <fullName>Event Management</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Service Centre</fullName>
            </value>
            <value>
                <fullName>Show Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>