unpackaged/main/default/objects/Activity/fields/Sub_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sub_Type__c</fullName>
    <description>Custom Sub Sub Type Field for Exhibitions/Tradeshow</description>
    <label>Sub Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>IAEE</fullName>
            </value>
            <value>
                <fullName>IAEE Annual</fullName>
            </value>
            <value>
                <fullName>PCMA</fullName>
            </value>
            <value>
                <fullName>PCMA Annual</fullName>
            </value>
            <value>
                <fullName>Fact Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>