unpackaged/main/default/objects/Activity/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <description>Custom Sub Type Field for Exhibitions/Tradeshow</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Planning</fullName>
            </value>
            <value>
                <fullName>Attached &amp; Completed Competitor Show Report</fullName>
            </value>
            <value>
                <fullName>Competitor Show Visit</fullName>
            </value>
            <value>
                <fullName>Credit Request</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Executed Contract</fullName>
            </value>
            <value>
                <fullName>Face-to-face Meeting</fullName>
            </value>
            <value>
                <fullName>Facility Capabilities Presentation</fullName>
            </value>
            <value>
                <fullName>Facility Visit</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Industry Event</fullName>
            </value>
            <value>
                <fullName>Last Attempt</fullName>
            </value>
            <value>
                <fullName>Last Meeting</fullName>
            </value>
            <value>
                <fullName>Last Reach</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Linked-In Message</fullName>
            </value>
            <value>
                <fullName>Mass Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>New Opportunity</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Presale Job Number</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Proforma</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Reassignment</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Sent Proposal</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>