unpackaged/main/default/objects/Activity/fields/Type_Reportable__c.field-meta.xml
<CustomField>
    <fullName>Type_Reportable__c</fullName>
    <description>Store the value from Type field so it can be reported on. Silly, I know :-)</description>
    <label>Type Reportable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>