unpackaged/main/default/objects/Activity/fields/Valid_Busines_Reason__c.field-meta.xml
<CustomField>
    <fullName>Valid_Busines_Reason__c</fullName>
    <description>sam test</description>
    <label>Valid Busines Reason</label>
    <type>TextArea</type>
</CustomField>